report import: add many more validations. tests: add tests for various import fail cases #667